--- a/personalPortfolio/css/_nav.sass
+++ b/personalPortfolio/css/_nav.sass
@@ -17,6 +17,8 @@ nav
     justify-content: space-between
     align-items: center
     z-index: 10
+    header
+        width: 100%
         
 
 #nav-menu
