--- a/personalPortfolio/css/_responsive12grid.sass
+++ b/personalPortfolio/css/_responsive12grid.sass
@@ -1,10 +1,15 @@
 @import 'spacings'
 @import 'col_sizes'
 
-// .container
-//     width: 100%
+.container
+    width: 100%
+    height: 100%
+    display: flex
+    flex-direction: column
 
 .row
+    width: 100%
+    height: 100%
     display: flex
     flex-flow: row wrap
     justify-content: flex-start
