--- a/personalPortfolio/css/challenge/_main_styles.sass
+++ b/personalPortfolio/css/challenge/_main_styles.sass
@@ -9,12 +9,12 @@ main
     overflow: hidden
 
 .main-section
-    min-height: 100vh
+    height: auto
     width: 100%
-    overflow: hidden
+    // overflow: hidden
 
 #welcome-section
-    height: 100
+    min-height: 100vh
     background: url('../img/projects/office_v3.png')
     background-size: 140%
     background-position: left top
@@ -25,7 +25,7 @@ main
 	left: 0 
 	top: 0 
 	width: 100% 
-	height: 100% 
+	height: 200% 
 	z-index: 0 
 	svg 
 		path 
@@ -61,6 +61,13 @@ section#welcome-section
 
 footer#footer
     min-height: 20vh
+
+span.logo
+    font-weight: 900
+    font-size: 1.4em
+
+object.logo
+    max-width: 8em
 
 @media (min-width: map-get($breakpoints-sizes, sm))
     .project-gallery
