add: web components support

--- a/personalPortfolio/css/challenge/_main_styles.sass
+++ b/personalPortfolio/css/challenge/_main_styles.sass
@@ -66,7 +66,7 @@ span.logo
     font-weight: 900
     font-size: 1.4em
 
-object.logo
+svg.logo
     max-width: 8em
 
 @media (min-width: map-get($breakpoints-sizes, sm))
