add: animation file

--- a/personalPortfolio/css/_form.sass
+++ b/personalPortfolio/css/_form.sass
@@ -27,8 +27,8 @@ form#contact
         position: relative
     fieldset
         z-index: 1
-        flex-direction: column-reverse
         @extend %vertical-center
+        flex-direction: column
         legend
             position: relative
             top: 2em
@@ -50,6 +50,7 @@ form#contact
     @extend %horizontal-center
     justify-content: space-between
     align-items: center
+    width: 100%
     // label
         // flex: 1 0 30%
         // text-align: left
