add: animations activator

--- a/productLandingPage/styles/challenge/_index.sass
+++ b/productLandingPage/styles/challenge/_index.sass
@@ -1,1 +1,8 @@
+@import 'variables'
+
 @import 'main_styles'
+@import 'welcome'
+@import 'features'
+@import 'how_it_works'
+@import 'pricing'
+@import 'contact'
