--- a/productLandingPage/styles/classes/_main_styles.sass
+++ b/productLandingPage/styles/classes/_main_styles.sass
@@ -9,7 +9,6 @@ body
     font-family: $body-font-family
     font-weight: $body-font-weight
 
-
 li, p, pre
     line-height: $line-height
     margin: 1rem 0
@@ -32,3 +31,6 @@ hr
 	border-style: inset 
 	border-width: 0.25em 
 	border-style: solid 
+
+button
+    cursor: pointer
