--- a/productLandingPage/styles/challenge/_main_styles.sass
+++ b/productLandingPage/styles/challenge/_main_styles.sass
@@ -1,13 +1,32 @@
 body
     background-color: lightblue
-    
+
 #header, #nav, #main, #footer
     width: 100%
     height: auto
 
 #header
     height: 4em
-    background: blue
+
+section[id^=main-]
+    min-height: 100vh
+    overflow: hidden
+    h2
+        text-transform: uppercase
+.box, .register
+    *
+        border: none
 
     
+.button
+    font-weight: bolder
+    height: auto
+    border-radius: $border-radius
+    padding: $padding-1-3
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: center
+    border: $border-0125
+    background: inherit
 
