--- a/productLandingPage/styles/classes/_responsive12grid.sass
+++ b/productLandingPage/styles/classes/_responsive12grid.sass
@@ -9,7 +9,7 @@
 
 .row
     width: 100%
-    height: 100%
+    height: auto
     display: flex
     flex-flow: row wrap
     justify-content: flex-start
