--- a/productLandingPage/styles/challenge/_main_styles.sass
+++ b/productLandingPage/styles/challenge/_main_styles.sass
@@ -30,3 +30,15 @@ section[id^=main-]
     border: $border-0125
     background: inherit
 
+.animation-activated
+    transition: all 1s linear!important
+
+#main-how-it-works,
+#main-pricing,
+#main-contact
+    opacity: 1
+
+// #main-how-it-works.animation-activated,
+// #main-pricing.animation-activated,
+// #main-contact.animation-activated
+//     opacity: 1
