--- a/productLandingPage/styles/classes/_checkbox.sass
+++ b/productLandingPage/styles/classes/_checkbox.sass
@@ -1,12 +1,12 @@
-%max_it
+%max-it
     width: 100%
     height: 100%
 
-%min_it
+%min-it
     width: 1px
     height: 1px  
 
-%super_absolute
+%super-absolute
     position: absolute
     top: 0
     left: 0
@@ -31,23 +31,23 @@
     label span, input
         opacity: 0
     & > input
-        @extend %max_it
+        @extend %max-it
     input
         z-index: 1
         margin: 0
     input, .switch, .pin, .background
-        @extend %max_it
-        @extend %super_absolute
+        @extend %max-it
+        @extend %super-absolute
     input:checked + .switch .pin
         right: 0
         left: auto
 
 .custom_checkbox
     label span
-        @extend %min_it
+        @extend %min-it
     label i
         @extend %centralize-all
-        @extend %max_it
+        @extend %max-it
         
 
 
