--- a/productLandingPage/styles/classes/_placeholders.sass
+++ b/productLandingPage/styles/classes/_placeholders.sass
@@ -11,7 +11,7 @@
     @extend %vertical-center
     @extend %horizontal-center
 
-%main_transition
+%main-transition
     transition: all .1s ease
 
 %cursor-pointer
@@ -33,15 +33,15 @@
     &:after
         @extend %basic-content-null
 
-%max_it
+%max-it
     width: 100%
     height: 100%
 
-%min_it
+%min-it
     width: 1px
     height: 1px  
 
-%super_absolute
+%super-absolute
     position: absolute
     top: 0
     left: 0
