--- a/productLandingPage/styles/classes/_responsive12grid.sass
+++ b/productLandingPage/styles/classes/_responsive12grid.sass
@@ -7,10 +7,18 @@
     display: flex
     flex-direction: column
 
-.row
+%flex-box-direction
     width: 100%
     height: auto
     display: flex
-    flex-flow: row wrap
+    flex-wrap: wrap
     justify-content: flex-start
     align-items: flex-start
+
+.row
+    @extend %flex-box-direction
+    flex-direction: row
+
+.column
+    @extend %flex-box-direction
+    flex-direction: column
