--- a/productLandingPage/styles/challenge/_features.sass
+++ b/productLandingPage/styles/challenge/_features.sass
@@ -14,7 +14,7 @@ $little-box-min-height: $image-size + 2
         font-size: 2em
     p
         font-size: 1em
-    .little-box-content
+    .little-x-content
         margin-right: $half-image-size
     .little-box-image
         @extend %round
