--- a/productLandingPage/styles/challenge/_pricing.sass
+++ b/productLandingPage/styles/challenge/_pricing.sass
@@ -1,13 +1,14 @@
 $figure-box-size: 8em
 $half-figure-box-size: $figure-box-size / 2
 
+$grid-column-gap: 1em
+
 #main-pricing > section
     display: grid
     grid-template-columns: 100%
     grid-template-rows: auto
     grid-column-gap: 1em
-    grid-row-gap: $half-figure-box-size
-    margin-top: 1em
+    grid-row-gap: 2em
     justify-content: space-around
 
 .box.icon-box
@@ -33,11 +34,14 @@ $half-figure-box-size: $figure-box-size / 2
             flex-direction: row
             figure
                 margin: -2em 1em 0 0
-        .box-content
+        .x-content
             margin: 0 $figure-box-size + 1
             padding-right: $figure-box-size + 1
 
 @media (max-width: map-get($breakpoints-sizes, sm))
+    #main-pricing > section
+        grid-row-gap: $grid-column-gap + $half-figure-box-size
+        margin-top: 2em
     .box.icon-box
         header
             display: flex
@@ -50,3 +54,8 @@ $half-figure-box-size: $figure-box-size / 2
             #main-pricing > section
                 grid-template-columns: 100% * 0.5
             
+
+.x-content
+    font-weight: bold
+    .mdi
+        margin-right: 1em!important
