--- a/productLandingPage/styles/challenge/_welcome.sass
+++ b/productLandingPage/styles/challenge/_welcome.sass
@@ -11,7 +11,7 @@
         box-shadow: $box-shadow
     p 
         font-size: 2em
-    .box-actions
+    .x-actions
         @extend %vertical-center
 
 .register
