--- a/productLandingPage/styles/challenge/_main_styles.sass
+++ b/productLandingPage/styles/challenge/_main_styles.sass
@@ -1,12 +1,9 @@
 body
     background-color: lightblue
 
-#header, #nav, #main, #footer
+#header, #main, #footer
     width: 100%
     height: auto
-
-#header
-    height: 4em
 
 section[id^=main-]
     min-height: 100vh
@@ -16,7 +13,6 @@ section[id^=main-]
 .box, .register
     *
         border: none
-
 
 .button
     font-weight: bolder
@@ -52,12 +48,12 @@ section[id^=main-]
 #main-how-it-works,
 #main-pricing,
 #main-contact
-    opacity: 1
+    opacity: 0
 
-// #main-how-it-works.animation-activated,
-// #main-pricing.animation-activated,
-// #main-contact.animation-activated
-//     opacity: 1
+#main-how-it-works.animation-activated,
+#main-pricing.animation-activated,
+#main-contact.animation-activated
+    opacity: 1
 
 *[class*=box]:focus,
 *[class*=box]:focus-within
