--- a/productLandingPage/styles/index/index.css
+++ b/productLandingPage/styles/index/index.css
@@ -195,7 +195,7 @@ button {
   cursor: pointer;
 }
 
-#nav-menu-opener, .icon, .switch, .custom_checkbox label i, nav, form#contact fieldset, .box .x-actions, .little-box {
+.icon, .switch, .custom_checkbox label i, #nav, #nav ul, #options, #options ul, form#contact fieldset, .box .x-actions, .little-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -204,7 +204,7 @@ button {
           align-items: center;
 }
 
-#nav-menu-opener, .icon, .switch, .custom_checkbox label i, .input {
+.icon, .switch, .custom_checkbox label i, #nav, #nav ul, #options, #options ul, .input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -217,14 +217,6 @@ button {
 * {
   -webkit-transition: all .1s ease;
   transition: all .1s ease;
-}
-
-#nav-menu-opener {
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
 }
 
 form#contact:before, .button:before {
@@ -2085,90 +2077,6 @@ form#contact:before, .button:before {
           flex-direction: column;
 }
 
-#nav-menu-opener {
-  position: fixed;
-  right: 1em;
-  top: 10em;
-  width: 4em;
-  height: 4em;
-  -webkit-box-sizing: normal;
-          box-sizing: normal;
-  font-size: 1rem;
-  -webkit-transform: translateY(-14em);
-          transform: translateY(-14em);
-}
-
-nav {
-  width: 100%;
-  height: 10em;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  z-index: 10;
-}
-
-nav header {
-  width: 100%;
-}
-
-#nav-menu {
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-#nav-menu,
-#nav-menu > *:not(#nav-menu-opener) {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#nav-menu > *:not(#nav-menu-opener) {
-  height: 2em;
-}
-
-#nav-internal, #nav-social, #nav-dark-mode {
-  padding: 0 1em;
-}
-
-#nav-internal > *, #nav-social > *, #nav-dark-mode > * {
-  margin-left: 1em;
-}
-
-#nav-internal {
-  font-size: 1.2em;
-}
-
-#nav-social span {
-  display: none;
-}
-
-@media (max-width: 960px) {
-  #nav-menu {
-    -webkit-box-orient: vertical !important;
-    -webkit-box-direction: normal !important;
-        -ms-flex-direction: column !important;
-            flex-direction: column !important;
-    -webkit-box-align: end !important;
-        -ms-flex-align: end !important;
-            align-items: flex-end !important;
-    -webkit-box-pack: center !important;
-        -ms-flex-pack: center !important;
-            justify-content: center !important;
-  }
-}
-
 .icon {
   padding: 1em;
   width: 3em;
@@ -2338,30 +2246,6 @@ form#contact fieldset textarea {
   }
 }
 
-body {
-  display: -ms-grid;
-  display: grid;
-      grid-template-areas: "nav" "main" "footer";
-}
-
-nav {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: nav;
-}
-
-main {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: main;
-}
-
-footer {
-  -ms-grid-row: 3;
-  -ms-grid-column: 1;
-  grid-area: footer;
-}
-
 @font-face {
   font-family: "Material Design Icons";
   src: url("https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/fonts/materialdesignicons-webfont.eot?v=3.6.95");
@@ -2385,13 +2269,9 @@ body {
   background-color: lightblue;
 }
 
-#header, #nav, #main, #footer {
+#header, #main, #footer {
   width: 100%;
   height: auto;
-}
-
-#header {
-  height: 4em;
 }
 
 section[id^=main-] {
@@ -2464,6 +2344,12 @@ section[id^=main-] h2 {
 #main-how-it-works,
 #main-pricing,
 #main-contact {
+  opacity: 0;
+}
+
+#main-how-it-works.animation-activated,
+#main-pricing.animation-activated,
+#main-contact.animation-activated {
   opacity: 1;
 }
 
@@ -2471,6 +2357,102 @@ section[id^=main-] h2 {
 *[class*=box]:focus-within {
   background: #F2F2F2 !important;
   outline: none;
+}
+
+#header {
+  height: 4em;
+  z-index: 10;
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 1em;
+}
+
+#header > * {
+  z-index: 11;
+}
+
+#nav-controller {
+  position: relative;
+}
+
+input#nav-controller:checked + #nav {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+input#nav-controller:checked ~ .logo {
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+}
+
+input#nav-controller:checked ~ .logo {
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+}
+
+input#options-controller:checked + #options {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+input#options-controller:checked ~ .logo {
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+}
+
+input#options-controller:checked ~ .logo {
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+}
+
+#nav, #options {
+  z-index: 9;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  height: 100vh;
+  background: inherit;
+}
+
+#nav *, #options * {
+  color: white;
+}
+
+#nav ul, #options ul {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+#nav li, #options li {
+  padding: 1em 3em;
+}
+
+.logo {
+  max-width: 4em;
+}
+
+@media screen and (orientation: landscape) {
+  #nav ul, #options ul {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
 }
 
 .box {
